[#59921]Expand button for paths
[#59921]show button and translations

--- a/src/os2datascanner/projects/report/locale/da/LC_MESSAGES/djangojs.po
+++ b/src/os2datascanner/projects/report/locale/da/LC_MESSAGES/djangojs.po
@@ -533,3 +533,11 @@ msgstr ""
 #, javascript-format
 msgid "% scanned"
 msgstr ""
+
+#: dist/js/tables/tableBehavior.js:299 js/tables/tableBehavior.js:299
+msgid "Show less"
+msgstr "Vis mindre"
+
+#: dist/js/tables/tableBehavior.js:301 js/tables/tableBehavior.js:301
+msgid "Show more"
+msgstr "Vis mere"
