[#61139] Implement an auto encryption widget for the grants admin pages
I wouldn't have even tried this if not for the MR process giving me a
minute to think, so hooray, code review saves the day

--- a/src/os2datascanner/projects/grants/locale/da/LC_MESSAGES/django.po
+++ b/src/os2datascanner/projects/grants/locale/da/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-12 16:39+0200\n"
+"POT-Creation-Date: 2024-06-13 13:27+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,21 +18,13 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: admin.py:13 admin.py:26
-msgid "password"
-msgstr "adgangskode"
+#: admin.py:16
+msgid "(unchanged)"
+msgstr "(uændret)"
 
-#: admin.py:18 admin.py:31 admin.py:44
-msgid "defined"
-msgstr "defineret"
-
-#: admin.py:18 admin.py:31 admin.py:44
-msgid "not defined"
-msgstr "ikke defineret"
-
-#: admin.py:39
-msgid "client secret"
-msgstr "klient-hemmeligheden"
+#: admin.py:33
+msgid "This field is required."
+msgstr "Dette felt er påkrævet."
 
 #: apps.py:8
 msgid "grants"
